# plex_job_crawler

./: pyproject.toml
examples/: config.toml
plex_job_crawler/: plex_job_crawler.py
plex_job_crawler/parser/: parse_recruit_category.py  parse_recruit_detail.py  parse_recruit_list.py
plex_job_crawler/schema/: company.py  recruit.py
